--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en">
 <head>
 	<title>Water</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
+	<link rel="stylesheet" type="text/css" href="style/style.css">
+	<script src="js/moment.min.js"></script>
 </head>
-<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
-<link rel="stylesheet" type="text/css" href="style/style.css">
 <body>
 	<div class="header">
 		<h1>Daily water intake tracker</h1>
+		<input id="date" type="date" placeholder="DD-MM-YYYY" onchange="changeDate(this)">
 		<h1 class="congratulation" hidden>Congrats, you have reached your daily target!</h1>
 	</div>
+
 	<div class="main">
 		<div class="control grid-item">
 			<button value=".25" onclick="fill(this)">Add 250 ml</button>
