date and congrats styling

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 	<div class="header">
-		<h1>Daily water intake tracker</h1>
+		<h1 class="title">Daily water intake tracker</h1>
 		<input id="date" type="date" placeholder="DD-MM-YYYY" onchange="changeDate(this)">
-		<h1 class="congratulation" hidden>Congrats, you have reached your daily target!</h1>
+		<span class="congratulation" hidden>Congrats, you have reached your daily target!</span>
 	</div>
 
 	<div class="main">
