--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,7 +12,7 @@
 	<div class="header">
 		<h1 class="title">Daily water intake tracker</h1>
 		<input id="date" type="date" placeholder="DD-MM-YYYY" onchange="changeDate(this)">
-		<span class="congratulation" hidden>Congrats, you have reached your daily target!</span>
+		<span class="congratulation">Congrats, you have reached your daily target!</span>
 	</div>
 
 	<div class="main">
