display spinner while data loads

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -15,6 +15,7 @@
 		<span class="congratulation">Congrats, you have reached your daily target!</span>
 	</div>
 
+	<div class="spinner"></div>
 	<div class="main">
 		<div class="control grid-item">
 			<button value=".25" onclick="fill(this)">Add 250 ml</button>
